# robot_simulation

./: .gitattributes  CMakeLists.txt  README.md  package.xml
data/: post_gen_info.txt  pre_gen_info.txt
scripts/: create_farm.py  get_plane_model.py  get_tree_model.py  old_create_farm.py  trial.world  waypoints.csv  write_waypoints.py
scripts/log/: latest_test
worlds/: empty.world  spraybot.world
